--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Yoshioka Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="page-title">
+        <h1>Yoshioka Portfolio</h1>
+      </div>
+      <div class="nav-menu">
+        <a href="#">about</a>
+        <a href="#">work</a>
+        <a href="#">contact</a>
+      </div>
+    </header>
+    <main>
+      <section id="about">
+        <h2>About</h2>
+        <p>Name: 吉岡春人(ヨシオカ ハルト)</p>
+      </section>
+    </main>
+  </body>
 </html>
