aboutまで書いた

--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@
     <main>
       <section id="about">
         <h2>About</h2>
-        <p>Name: 吉岡春人(ヨシオカ ハルト)</p>
+        <p>吉岡春人(ヨシオカ ハルト)</p>
+        <p>MCL盛岡情報ビジネス&デザイン専門学校 高度情報工学科</p>
+        <p>岩手県盛岡市出身、20004年 4月 1日生まれ</p>
+        <h3>資格</h3>
+        <p>基本情報技術者試験</p>
+        <h3>学んだもの</h3>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Lravel</li>
+          <li>Java</li>
+          <li>Python</li>
+          <li>MySQL</li>
+        </ul>
       </section>
     </main>
   </body>
