--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
           <li>MySQL</li>
         </ul>
       </section>
+      <section id="work">
+        <h2>WORK</h2>
+        <ul>
+          <li><a href="#" alt="クイズアプリ"></a></li>
+          <li><a href="#" alt="クイズアプリ"></a></li>
+          <li><a href="#" alt="クイズアプリ"></a></li>
+        </ul>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>お問い合わせは、SNSまたはメールにてお願いします。</p>
+        <a href="#">Instagram</a>
+        <p>メールアドレス</p>
+        <p>h.yoshioka.sys22@morijyobi.ac.jp</p>
+      </section>
     </main>
   </body>
 </html>
