--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
       <section id="work">
         <h2>WORK</h2>
         <ul>
-          <li><a href="#" alt="クイズアプリ"></a></li>
-          <li><a href="#" alt="クイズアプリ"></a></li>
-          <li><a href="#" alt="クイズアプリ"></a></li>
+          <li>
+            <a href="#"><img src="#" alt="クイズアプリ" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="#" alt="クイズアプリ" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="#" alt="クイズアプリ" /></a>
+          </li>
         </ul>
       </section>
       <section id="contact">
